# AI-Assisted-Predictive-Maintenance

./: .gitignore  02_preprocessing_feature_engineering-Copy1.ipynb  README.md  WORKFLOW.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
artifacts/: preprocessing_pipeline.pkl
data/: README.md
data/processed/: binary_dataset.pkl  binary_full_dataset.csv  multiclass_dataset.pkl  multiclass_full_dataset.csv  preprocessor.pkl
notebooks/: 01_exploratory_data_analysis.ipynb  02_preprocessing_feature_engineering.ipynb  03_model_training.ipynb  03b_model_training_Multiclass.ipynb  04_evaluation.ipynb
src/: config.py  evaluation.py  feature_engineering.py  models.py  predict.py  preprocessing.py
