[tool.poetry]
package-mode = false
name = "ai-assisted-predictive-maintenance"
version = "0.1.0"
description = "AI-assisted predictive maintenance system using bearing vibration data"
authors = ["LaMinMaung193 <iamlaminmaung193@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.2"
scipy = "^1.17.0"
pandas = "^3.0.0"
scikit-learn = "^1.8.0"
xgboost = "^3.2.0"
statsmodels = "^0.14.6"
tsfresh = "^0.21.1"
pywavelets = "^1.9.0"
h5py = "^3.15.1"
pyarrow = "^23.0.0"
openpyxl = "^3.1.5"
jupyterlab = "^4.5.3"
ipykernel = "^7.2.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
imbalanced-learn = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
